lower case logo spelling

--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Register" hide-nav-bar="true">
     <ion-content>
         <div class="center-horizontal login-container">
-           <img src="img/Logo.png" class="center-horizontal login-logo"/>
+           <img src="img/logo.png" class="center-horizontal login-logo"/>
             <ion-list class="list list-inset">
                 
                 <label class="item item-input item-floating-label neutral">
